# varbench

./: .gitignore  README.md  pyproject.toml
data/clinvar/: download_date.txt
evals_canonical/clinical_interpretation/: brca1_known_pathogenic.json  vus_conflicting_evidence.json
evals_canonical/drug_moa/: cetp_genetics_unclear.json  cetp_neutral_evidence.json  pcsk9_lof_supports_inhibitor.json  pcsk9_with_noise.json
evals_canonical/population_genetics/: pcsk9_r46l_ba1_check.json
evals_canonical/variant_calling/: list_heterozygous_variants.json
evals_canonical/variant_filtering/: high_impact_consequences.json  missense_with_combined_annotations.json  multi_condition_filter.json  pass_and_dp30.json
evals_canonical/vcf_qc/: count_pass_variants.json  titv_ratio.json
evals_generated/clinical_interpretation/: ci_clinvar_001_MLH1_89608.json  ci_clinvar_002_MSH2_90638.json  ci_clinvar_003_MLH1_89672.json  ci_clinvar_004_MLH1_90041.json  ci_clinvar_005_GAA_1327504.json  ci_clinvar_006_BRCA1_54782.json  ci_clinvar_007_BRCA1_17693.json  ci_clinvar_008_RAF1_40613.json  ci_clinvar_009_BRCA2_52203.json  ci_clinvar_010_BRCA2_51061.json  ci_clinvar_011_PIK3CD_1406866.json  ci_clinvar_012_PMS2_91307.json  ci_clinvar_013_RUNX1_561243.json  ci_clinvar_014_GP1BB_3775056.json  ci_clinvar_015_F8_368117.json  ci_clinvar_016_HNF1A_435424.json  ci_clinvar_017_PAH_102628.json  ci_clinvar_018_LDLR_251537.json  ci_clinvar_019_DCLRE1C_4851281.json  ci_clinvar_020_PAH_102782.json  ci_clinvar_021_RYR1_590556.json  ci_clinvar_022_HNF4A_3358877.json  ci_clinvar_023_MSH2_90685.json  ci_clinvar_024_RYR1_1210315.json  ci_clinvar_025_SERPINC1_2295171.json  ci_clinvar_026_GAA_499380.json  ci_clinvar_027_LDLR_183125.json  ci_clinvar_028_RUNX1_3336848.json  ci_clinvar_029_GCK_2691834.json  ci_clinvar_030_HNF4A_931741.json  ci_clinvar_031_UBE3A_386114.json  ci_clinvar_032_BRCA2_232126.json  ci_clinvar_033_BRCA1_427350.json  ci_clinvar_034_BRCA2_215603.json  (+17 more)
results/: leaderboard_v1.md
scripts/: generate_clinvar_evals.py
varbench/: cli.py  eval_spec.py  leaderboard.py  runner.py
(+336 files in other folders)
