[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "varbench"
version = "0.1.0"
description = "Benchmark for agentic variant analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Abhyuday", email = "abhyudaysinghp@gmai.com" },
]
keywords = ["genomics", "variants", "benchmark", "agents", "llm", "clinvar", "gnomad", "acmg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "pydantic>=2.5",
    "requests>=2.31",
    "tqdm>=4.66",
    "pandas>=2.1",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "click>=8.1",
    "rich>=13.7",
]

[project.optional-dependencies]
vcf = ["pysam>=0.22", "cyvcf2>=0.30"]
agents = ["anthropic>=0.40", "openai>=1.40", "ollama>=0.3"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5", "mypy>=1.10"]
all = [
    "pysam>=0.22", "cyvcf2>=0.30",
    "anthropic>=0.40", "openai>=1.40", "ollama>=0.3",
    "pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5", "mypy>=1.10",
]

[project.scripts]
varbench = "varbench.cli:main"

[project.urls]
Homepage = "https://github.com/Abhi-9479/varbench"
Repository = "https://github.com/Abhi-9479/varbench"
Issues = "https://github.com/Abhi-9479/varbench/issues"

[tool.setuptools.packages.find]
include = ["varbench*"]
exclude = ["tests*", "evals_canonical*", "examples*", "results*", "scripts*", "data*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
